# mutation_scatter_plot

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .zenodo.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  analyze_partial_codon_stats.py  bench_chunksize_subset_100000_spikenuc1207.native2ascii.no_junk.counts.clean.exactly_3822.fasta.tsv  bench_scaling_spikenuc1207.native2ascii.no_junk.counts.clean.exactly_3822.fasta.tsv  calculate_codon_frequencies.py  extract_ragged_sequences.py  mutation_scatter_plot.py  old.BLOSUM80.amino_acid_changes.actually_rendered.tsv  old.BLOSUM80.amino_acid_changes.html  old.frequencies.unchanged_codons.tsv  old_hover.BLOSUM80.amino_acid_changes.codon.frequencies.colors.tsv  old_hover.frequencies.tsv  profile_codon_freq.txt  profile_codon_t4.stats  profile_codon_t4_out.tsv  profile_codon_t4_out.unchanged_codons.tsv  profile_line_t4.lprof  profile_line_t4_out.tsv  profile_line_t4_out.unchanged.tsv  pyproject.toml  scaling_test.BLOSUM80.amino_acid_changes.aa.frequencies.colors.tsv  scaling_test.BLOSUM80.amino_acid_changes.matplotlib_hovers.json  test.longer_0.fasta
data/: golden_mutations.json
docs/: api.md  colormap_symmetrization.md  parallelization_optimization.md  performance_calculate_codon_frequencies.md  pipeline_processing_scaling.md  profiling_report.md  rendering_scaling.md  sequence_deduplication_pipeline.md  testing_framework.md  translation.md
scripts/: alignment2dots.py  analyze_obscure_chars.py  apply_sequence_regexes.py  bench_chunksize_sweep.py  bench_thread_scaling.py  benchmark_parallelism.py  check_alignment_trimming.py  count_motifs_in_sequences.py  count_same_sequences.py  count_same_sequences.py.ori  create_list_of_discarded_sequences.py  create_per_residue_tables.sh  drop_erroneous_insertions.py  extract_gisaid_ids.py  find_dynamic_positions.py  find_variable_positions_in_time.py  fix_SARS-CoV2_S-protein_indel_misalignments.sh  kick.py  kick.sh  (+15 more)
(+331 files in other folders)
